data/derived/sp14/progs/unify/prog1775.ml.out
Characters 474-522:
  | r when r > 25 && r < 35 -> buildTimes(buildCosine(buildSine(build(rand, depth - 1))))
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
